--- a/SYCOsync/desktopTestProgram/.classpath
+++ b/SYCOsync/desktopTestProgram/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry excluding="TestRoutines/TestPosts.java" kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
 			<attribute name="owner.project.facets" value="java"/>
@@ -8,8 +8,7 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="lib" path="C:/B3ACONsoft/commons-net-3.4/commons-net-3.4.jar"/>
-	<classpathentry kind="lib" path="C:/B3ACONsoft/json-20140107.jar"/>
-	<classpathentry kind="lib" path="C:/B3ACONsoft/javax.json-api-1.0.jar"/>
+	<classpathentry kind="lib" path="C:/devCapstone/apacheNet/commons-net-3.4/commons-net-3.4.jar"/>
+	<classpathentry kind="lib" path="C:/devCapstone/javax.json-api-1.0.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
