--- a/SYCOsync/desktopTestProgram/.classpath
+++ b/SYCOsync/desktopTestProgram/.classpath
@@ -8,7 +8,6 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="lib" path="C:/devCapstone/apacheNet/commons-net-3.4/commons-net-3.4.jar"/>
-	<classpathentry kind="lib" path="C:/devCapstone/javax.json-api-1.0.jar"/>
+	<classpathentry kind="lib" path="C:/B3ACONsoft/javax.json-1.0.4.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
